--- a/first site/style.css
+++ b/first site/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 15px;
 }
 
@@ -19,11 +21,16 @@ body {
 }
 
 .header__logo {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
     margin-left: auto;
     margin-right: auto;
+    color: rgb(107, 103, 103);
 }
 
 .search_engine {
+    font-family: 'Poppins', sans-serif;
+    font-size: 22px;
     padding: 0 52px;
 }
 
@@ -33,8 +40,16 @@ body {
 }
 
 .search_button {
-    margin: 2px 0 0 372px;
+    margin: 0px 0 -11px 372px;
     padding: 5px;
+}
+
+.description {
+    font-size: 15px;
+    font-family: 'Rubik', sans-serif;
+    padding: 0px 457px 0 56px;
+    margin: 0px 0px 18px 0;
+    color: rgb(107, 103, 103);
 }
 
 .footer {
@@ -48,6 +63,7 @@ body {
 }
 
 .footer__text {
+    font-family: 'Open Sans', sans-serif;
     margin-left: auto;
     margin-right: auto;
 }
