--- a/req/src/main/webapp/styles/style.css
+++ b/req/src/main/webapp/styles/style.css
@@ -34,7 +34,7 @@ body {
 
 .basic {
     height: 700px;
-    background: url("img/фон.jpg") center;
+    background: url("../img/background.jpg") center;
     padding-top: 1px;
 }
 
